Fix editor styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -195,7 +195,7 @@ header a {
 }
 
 .editor-btn-wrapper input {
-  font-weight: lighter;
+  font-weight: light;
   padding: 10px 20px;
   border-radius: 5px;
 }
